# zk-DEAP-anonymous

./: Cargo.toml  LICENSE  README.md
azureVMLogs/: VM3.jsonl  VM4.jsonl  VM5.jsonl  VM6.jsonl  VM7.jsonl  VM8.jsonl  vmLogAnalysis.py
src/snark/: mod.rs
